syntax = "proto3";

package proto;

option go_package="./proto";

message Msg {
	int32  code      = 1;
	uint32 http_code = 2;
	string msg       = 3;
}

message CreateQ {
	string password = 1;
}

message CreateA {
	string id  = 1;
	Msg    msg = 2;
	
}

message VerifyQ {
	string id       = 1;
	string password = 2;
}

message VerifyA {
	string status = 1;
	Msg    msg    = 2;
}

message GetOrUpdateQ {
	string id       = 1;
	string password = 2;
	string status   = 3;
}

message GetOrUpdateA {
	string status = 1;
	Msg    msg    = 2;
}

service AuthService {
	rpc Create(CreateQ) returns (CreateA) {};
	rpc Verify(VerifyQ) returns (VerifyA) {};
	rpc GetOrUpdate(GetOrUpdateQ) returns (GetOrUpdateA) {};
}
